--- a/To Do List/style.css
+++ b/To Do List/style.css
@@ -41,3 +41,95 @@ form button:hover{
     background:cornflowerblue;
     color:white;
 }
+
+.todo-container{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.todo-list{
+    min-width:30%;
+    list-style: none;
+}
+
+.todo{
+    margin:0.5rem;
+    background: white;
+    color:black;
+    font-size:1.5rem;
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    transition : all 0.5s ease;
+}
+
+.todo li{
+    flex: 1;
+}
+
+.trash-btn,
+.complete-btn {
+    background-color: rgb(170, 9, 9);
+    color:black;
+    border:none;
+    padding:1rem;
+    cursor: pointer;
+    font-size:1rem;
+}
+
+.complete-btn {
+    background: rgb(53, 170, 53);
+}
+
+.todo-item {
+    padding: 0rem 0.5rem;
+}
+
+.fa-trash,
+.fa-check{
+    pointer-events: none;
+}
+
+.completed{
+    text-decoration: line-through;
+    opacity:0.5;
+}
+
+.fall{
+    transform: translateY(8rem) rotateZ(20deg);
+    opacity:0;
+}
+
+select{
+    -webkit-appearance: none;
+    appearance: none;
+    outline: none;
+    box-shadow: none;
+    border: none;
+    color:cornflowerblue;
+    width:10rem;
+    cursor: pointer;
+    padding: 1rem;
+}
+
+.select{
+    margin : 1rem;
+    position: relative;
+    overflow: hidden;
+}
+
+.select::after{
+    content: "\25BC";
+    position: absolute;
+    background: orange;
+    right: 0;
+    padding:1rem;
+    pointer-events: none;
+    transition: all 0.3s ease;
+}
+
+.select:hover::after{
+    background:white;
+    color:cornflowerblue;
+}
